fix monitor size on mobile / fix margin bottom of index page

--- a/styles/Computer.module.css
+++ b/styles/Computer.module.css
@@ -283,15 +283,15 @@
     margin-top: 4rem;
   }
   .monitortop {
-    width: 300px;
+    width: 320px;
     height: 200px;
     border: 12px solid black;
   }
   .monitortext {
-    font-size: 11px;
+    font-size: 11.5px;
   }
   .monitorbottom {
-    width: 321px;
+    width: 342px;
     height: 48px;
   }
   .monitorneck {
@@ -304,58 +304,3 @@
     height: 22px;
   }
 }
-/* 
-@media only screen and (max-width: 390px) {
-  .computerwrapper {
-      margin-left: 0;
-      margin-top: 3rem;
-  }
-  .monitortop {
-    width: 320px;
-    height: 210px;
-    border: 12px solid black;
-  }
-  .monitortext {
-    font-size: 12px;
-  }
-  .monitorbottom {
-    width: 344px;
-    height: 48px;
-  }
-  .monitorneck {
-    width: 70px;
-    height: 0;
-    border-bottom: 50px solid #bfc5cc;
-  }
-  .monitorstand {
-    width: 160px;
-    height: 25px;
-  }
-}
-
-@media only screen and (max-width: 375px) {
-    .computerwrapper {
-        margin-top: 4rem;
-    }
-    .monitortop {
-      width: 300px;
-      height: 200px;
-      border: 12px solid black;
-    }
-    .monitortext {
-      font-size: 11px;
-    }
-    .monitorbottom {
-      width: 321px;
-      height: 48px;
-    }
-    .monitorneck {
-      width: 65px;
-      height: 0;
-      border-bottom: 50px solid #bfc5cc;
-    }
-    .monitorstand {
-      width: 150px;
-      height: 22px;
-    }
-  } */
