--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -72,6 +72,12 @@
   }
 }
 
+@media only screen and (max-width: 450px) {
+  .wholeintrotext {
+    margin: 10px 0 10px 0;
+  }
+}
+
 @media only screen and (max-width: 375px) {
   .introtext {
     font-size: 40px;
